--- a/wordGameFront/package.json
+++ b/wordGameFront/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.4.0",
+    "jest": "^27.4.5",
     "remixicon": "^2.5.0",
     "vue": "^3.2.25"
   },
