--- a/wordGameFront/package.json
+++ b/wordGameFront/package.json
@@ -2,21 +2,31 @@
   "name": "chatappfront",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "dev": "vite",
+    "preview": "vite preview",
+    "test": "jest src"
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.4.0",
-    "jest": "^27.4.5",
     "remixicon": "^2.5.0",
     "vue": "^3.2.25"
   },
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.16.7",
+    "@babel/preset-env": "^7.16.7",
+    "@types/jest": "^27.4.0",
     "@vitejs/plugin-vue": "^2.0.0",
+    "@vue/test-utils": "^2.0.0-rc.18",
     "autoprefixer": "^10.4.0",
+    "babel-jest": "^27.4.5",
+    "esbuild": "^0.14.10",
+    "jest": "^26.6.3",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.7",
-    "vite": "^2.7.2"
+    "ts-jest": "^26.5.6",
+    "typescript": "~3.9.3",
+    "vite": "^2.7.2",
+    "vue-jest": "^5.0.0-alpha.10"
   }
 }
