--- a/wordGameFront/package.json
+++ b/wordGameFront/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.4.0",
     "remixicon": "^2.5.0",
+    "tslib": "^2.3.1",
     "vue": "^3.2.25"
   },
   "devDependencies": {
@@ -19,14 +20,19 @@
     "@vitejs/plugin-vue": "^2.0.0",
     "@vue/test-utils": "^2.0.0-rc.18",
     "autoprefixer": "^10.4.0",
+    "babel-core": "^6.26.3",
     "babel-jest": "^27.4.5",
+    "babel-loader": "^8.2.3",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "esbuild": "^0.14.10",
-    "jest": "^26.6.3",
+    "jest": "^27.4.5",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.7",
-    "ts-jest": "^26.5.6",
+    "ts-jest": "^27.1.2",
     "typescript": "~3.9.3",
     "vite": "^2.7.2",
-    "vue-jest": "^5.0.0-alpha.10"
+    "vue3-jest": "^27.0.0-alpha.1"
   }
 }
