--- a/netlify.toml
+++ b/netlify.toml
@@ -8,11 +8,11 @@ base = 'wordGameFront/'
 # the build. This is relative to the base directory if one has been set, or the
 # root directory if a base has not been set. This sample publishes the
 # directory located at the absolute path "root/project/build-output"
-publish = "wordGameFront/dist/"
+publish = "dist/"
 
 # The following redirect is intended for use with most SPAs that handle
 # routing internally.
 [[redirects]]
 from = "/*"
-to = "/wordGameFront/index.html"
+to = "/index.html"
 status = 200
